[project]
name = "whatsmybitrate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "audioread>=3.0.1",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]
